--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -32,7 +32,7 @@
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/toolbar_name"
-                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
+                    style="@style/TextAppearance.MaterialComponents.Headline6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
