--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -1,64 +1,79 @@
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/notification_card_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="4dp">
-    <!-- Card view of a notification -->
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+        <variable
+            name="notification"
+            type="com.apptec.camello.models.NotificationModel" />
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/notification_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp">
+        android:padding="4dp">
+        <!-- Card view of a notification -->
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/textView4"
-            style="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:layout_width="wrap_content"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/label_notification_title"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="3dp"
+            android:backgroundTint="@android:color/darker_gray"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/notification_title"
-            style="@style/TextAppearance.MaterialComponents.Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/tools_title_example"
-            card_view:layout_constraintBaseline_toBaselineOf="@+id/textView4"
-            card_view:layout_constraintStart_toEndOf="@+id/textView4" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView4"
+                style="@style/TextAppearance.MaterialComponents.Subtitle2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="@string/label_notification_title"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/textView"
-            style="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="4dp"
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/notification_title"
+                style="@style/TextAppearance.MaterialComponents.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/tools_title_example"
+                card_view:layout_constraintBaseline_toBaselineOf="@+id/textView4"
+                card_view:layout_constraintStart_toEndOf="@+id/textView4" />
 
-            android:text="@string/label_notification_sent_date"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/notification_title" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView"
+                style="@style/TextAppearance.MaterialComponents.Subtitle2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="4dp"
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/notification_sent_date"
-            style="@style/TextAppearance.MaterialComponents.Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            card_view:layout_constraintBaseline_toBaselineOf="@+id/textView"
-            card_view:layout_constraintStart_toEndOf="@+id/textView"
-            tools:text="@string/tools_date_example" />
+                android:text="@string/label_notification_sent_date"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toBottomOf="@+id/notification_title" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/notification_sent_date"
+                style="@style/TextAppearance.MaterialComponents.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                card_view:layout_constraintBaseline_toBaselineOf="@+id/textView"
+                card_view:layout_constraintStart_toEndOf="@+id/textView"
+                tools:text="@string/tools_date_example" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+
+</layout>
+
