--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -65,6 +65,7 @@
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/notification_sent_date"
                 style="@style/TextAppearance.MaterialComponents.Body2"
+                android:text="@{notification.readableSentDate}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
