--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -14,7 +14,7 @@
         android:id="@+id/notification_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@{notification.read ? @color/white : @color/unreadNotificationBackground}"
+        android:backgroundTint="@{notification.isRead == 1 ? @color/white : @color/unreadNotificationBackground}"
         android:layout_marginTop="8dp"
         android:padding="4dp">
         <!-- Card view of a notification -->
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="@string/tools_title_example"
+                android:text="@{notification.title}"
                 card_view:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                 card_view:layout_constraintStart_toEndOf="@+id/textView4" />
 
