--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -14,7 +14,7 @@
         android:id="@+id/notification_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@{notification.isRead == 1 ? @color/white : @color/unreadNotificationBackground}"
+        android:backgroundTint="@{notification.isRead == 1 ? @color/readNotificationBackground : @color/white}"
         android:layout_marginTop="8dp"
         android:padding="4dp">
         <!-- Card view of a notification -->
