--- a/app/src/main/res/layout/fragment_show_policies.xml
+++ b/app/src/main/res/layout/fragment_show_policies.xml
@@ -24,10 +24,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="@dimen/activity_vertical_margin"
+        android:focusable="false"
         android:paddingRight="@dimen/activity_vertical_margin">
 
         <WebView
             android:id="@+id/web_view"
+            android:focusedByDefault="true"
+            android:focusable="false"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="10dp"
@@ -39,6 +42,7 @@
 
         <Button
             android:id="@+id/accept_button"
+            android:focusable="false"
             android:background="@drawable/accept_button_rounded"
             android:onClick="@{() -> loginViewModel.setNewDestination(navDirection.getActionId())}"
             android:backgroundTint="@{buttonEnabled == true ? @color/colorPrimary : @android:color/darker_gray}"
