--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -46,8 +46,9 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="Example" />
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/refresh_button"
+                    android:background="@color/colorPrimary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
