--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -30,7 +31,11 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView4"
-                style="@style/TextAppearance.MaterialComponents.Subtitle2"
+
+                android:textColor="@android:color/black"
+                android:textSize="@{notification.isRead == 1 ? 40 : 40}"
+                app:isBold="@{notification.isRead != 1}"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -40,23 +45,31 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/notification_title"
-                style="@style/TextAppearance.MaterialComponents.Body2"
+
+                android:textColor="@android:color/black"
+                android:textSize="@{notification.isRead == 1 ? 34 : 40}"
+
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="@{notification.title}"
                 card_view:layout_constraintBaseline_toBaselineOf="@+id/textView4"
-                card_view:layout_constraintStart_toEndOf="@+id/textView4" />
+                card_view:layout_constraintStart_toEndOf="@+id/textView4"
+                tools:text="Aviso importante" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView"
-                style="@style/TextAppearance.MaterialComponents.Subtitle2"
+
+                android:textColor="@android:color/black"
+                android:textSize="@{notification.isRead == 1 ? 40 : 40}"
+                app:isBold="@{notification.isRead != 1}"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginBottom="4dp"
-
                 android:text="@string/label_notification_sent_date"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
@@ -64,7 +77,11 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/notification_sent_date"
-                style="@style/TextAppearance.MaterialComponents.Body2"
+
+                android:textColor="@android:color/black"
+                android:textSize="@{notification.isRead == 1 ? 34 : 40}"
+
+
                 android:text="@{notification.readableSentDate}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
