--- a/app/src/main/res/layout/fragment_form.xml
+++ b/app/src/main/res/layout/fragment_form.xml
@@ -31,13 +31,14 @@
             android:background="@android:color/white"
             android:contentDescription="@string/logo_alt"
             android:elevation="0dp"
-            android:src="@mipmap/ic_launcher_camello"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            app:srcCompat="@drawable/ic_launcher_foreground" />
 
         <TextView
             android:id="@+id/textView2"
