--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:opacity="opaque">
     <!-- The background color, preferably the same as your normal theme -->
     <item android:drawable="@android:color/white" />
     <!-- Your product logo - 144dp color version of your app icon -->
-    <item>
+    <item
+        android:height="500dp"
+        android:width="500dp"
+        android:gravity="center">
 
         <bitmap
-            android:gravity="center"
-            android:src="@drawable/ic_launcher_camello" />
+            android:tileMode="disabled"
+            android:src="@drawable/camello_logo" />
+
     </item>
 </layer-list>
