--- a/app/src/main/res/layout/fragment_form.xml
+++ b/app/src/main/res/layout/fragment_form.xml
@@ -25,6 +25,8 @@
 
         <ImageView
             android:id="@+id/imageView"
+            android:paddingLeft="8dp"
+            android:foregroundGravity="center"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:adjustViewBounds="false"
@@ -42,6 +44,7 @@
 
         <TextView
             android:id="@+id/textView2"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
