--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,9 +64,9 @@
 
                 </LinearLayout>
 
-                <Button
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/fragment_home_start_button"
-                    style="@style/TextAppearance.MaterialComponents.Button"
+                    style="@style/PrincipalButton"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
