--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,18 @@
 
     </style>
 
+    <style name="DialogTheme" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <item name="android:buttonBarPositiveButtonStyle">@style/NormalButton</item>
+        <item name="android:buttonBarNegativeButtonStyle">@style/NormalButton</item>
+    </style>
+
+    <style name="NormalButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:elevation">0dp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
 
     <style name="PrincipalButton" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/bottom_half_circle</item>
