--- a/app/src/main/res/drawable-anydpi/ic_play.xml
+++ b/app/src/main/res/drawable-anydpi/ic_play.xml
@@ -3,12 +3,12 @@
     android:height="24dp"
     android:viewportWidth="26.4"
     android:viewportHeight="26.4"
-    android:tint="#2196F3"
-    android:alpha="0.8">
-  <group android:translateX="1.2"
-      android:translateY="1.2">
-      <path
-          android:fillColor="#FF000000"
-          android:pathData="M8,5v14l11,-7z"/>
-  </group>
+    android:tint="@color/colorPrimary">
+    <group
+        android:translateX="1.2"
+        android:translateY="1.2">
+        <path
+            android:fillColor="#FF000000"
+            android:pathData="M8,5v14l11,-7z" />
+    </group>
 </vector>
