--- a/app/src/main/res/layout/permission_item.xml
+++ b/app/src/main/res/layout/permission_item.xml
@@ -44,9 +44,11 @@
                 android:layout_height="45dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
+                android:alpha="0.4"
                 android:background="@null"
                 android:contentDescription="borrar"
                 android:src="@drawable/ic_delete"
+                android:tint="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@drawable/ic_delete" />
@@ -106,6 +108,7 @@
                     android:backgroundTint="@android:color/white"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/circle_chip_background"
+
                     android:src="@drawable/ic_play" />
 
                 <LinearLayout
