--- a/app/src/main/res/layout/dialog_fragment_disclosure.xml
+++ b/app/src/main/res/layout/dialog_fragment_disclosure.xml
@@ -8,13 +8,14 @@
     android:paddingHorizontal="@dimen/activity_horizontal_margin">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/reference_image_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:alpha="0.8"
+        android:contentDescription="@string/disclosure_image_alt"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -42,7 +43,7 @@
         android:text="@string/disclosure_explanation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/reference_image_view" />
 
     <Button
         android:id="@+id/disclosure_positive_button"
@@ -54,5 +55,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/disclosure_explanation" />
+
+    <ImageView
+        android:id="@+id/help_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:contentDescription="@string/help_button_alt"
+        app:layout_constraintBottom_toBottomOf="@+id/disclosure_positive_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/disclosure_positive_button"
+        app:srcCompat="@drawable/ic_baseline_help_center_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
